# ylesent

./: .gitignore  README.md  pyproject.toml
data/preprocessed/: news_preprocessed.csv  training_preprocessed.csv
data/raw/: dummy_sentiments.csv  fi.csv  news.csv
data/results/: predictions.csv
models/: model_dummy.joblib  model_logreg.joblib
src/: __main__.py  predict.py  preprocess.py  train.py  training_data_preprocess.py  visualize.py
