[project]
name = "ylesent"
version = "0.1.0"
description = ""
authors = [
    {name = "Saija Piira",email = "saija.piira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "torch==2.2.2",
    "stanza>=1.10.1,<2.0.0",
    "nltk (>=3.9.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ylesent = "src.__main__:main"